--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </style>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
     />
   </head>
   <body>
@@ -142,6 +143,296 @@
       <div class="btn">
         <button>LOAD MORE</button>
       </div>
+      <div class="middle-container">
+        <div class="mid-con">
+          <div class="section">
+            <p>Know us</p>
+            <h1>Why choose us?</h1>
+          </div>
+          <div class="sec-1">
+            <div class="sec-2">
+              <img src="./sec1.png" alt="" />
+              <h5>Responsive</h5>
+              <p>
+                Your website layout will change based on the device a person is
+                using. Our responsive web designing team will create a layout
+                for all screen sizes to ensure that your website visitors are
+                able to view the information properly, which could help increase
+                your conversions.
+              </p>
+            </div>
+            <div class="sec-2">
+              <img src="./sec2.png" alt="" />
+              <h5>SEO Friendly</h5>
+              <p>
+                We perform intensive on-page and off-page optimization to ensure
+                that every aspect of your SEO in on point. We're out there
+                spreading the news about how great your website is. The race to
+                the top never ends. We continue to monitor and test what's
+                working and what's not.
+              </p>
+            </div>
+            <div class="sec-2">
+              <img src="./sec-3.png" alt="" />
+              <h5>Best in Class</h5>
+              <p>
+                We primarily work with WordPress and we are well-versed in our
+                craft. Every project begins with understanding a brand's needs,
+                goals and users which serve as a blueprint for web design and
+                development. On that foundation, we design modern and compelling
+                websites
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="last-container">
+        <div class="heading">
+          <h1>Our Services</h1>
+        </div>
+        <div class="Box1">
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-brands fa-wordpress"> </i>
+            </div>
+
+            <h5>WordPress</h5>
+            <p>CMS Development</p>
+          </div>
+
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-laptop-code"></i>
+            </div>
+            <h5>Infographics</h5>
+            <p>Designing</p>
+          </div>
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-leaf"></i>
+            </div>
+            <h5>Logo</h5>
+            <p>Designing</p>
+          </div>
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-brands fa-digital-ocean"></i>
+            </div>
+            <h5>Digital</h5>
+            <p>Marketing</p>
+          </div>
+        </div>
+        <div class="Box2">
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+
+            <h5>E-Com</h5>
+            <p>Development</p>
+          </div>
+
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-paintbrush"></i>
+            </div>
+
+            <h5>Graphic</h5>
+            <p>Designing</p>
+          </div>
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-globe"></i>
+            </div>
+
+            <h5>Domain</h5>
+            <p>Registration</p>
+          </div>
+          <div class="box11">
+            <div class="mini-card">
+              <i class="fa-solid fa-bars-progress"></i>
+            </div>
+
+            <h5>Hosting</h5>
+            <p>Services</p>
+          </div>
+        </div>
+      </div>
+      <div class="first-content">
+        <div class="sec-content">
+          <h2>Our Happy Clients!</h2>
+          <div class="sec1">
+            <div class="sec12">
+              <p>
+                "Panfila® Global Solutions renders excellent services for all
+                your technical needs. The expertise of Mahimai is incomparable
+                that could cater to solve all our technical expectations. Our
+                institute is very happy and fortunate to get such a gem to
+                facilitate the fast growth of our Virtual Institute. Foreseeing
+                a much longer learning travel with him…!"
+              </p>
+              <div class="th">
+                <div class="im">
+                  <img src="./sec12.png" alt="" width="60px" />
+                </div>
+                <div class="head">
+                  <h4>Thalir Centre</h4>
+                  <p>Director</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="sec12">
+              <p>
+                "We are extremely happy with the website that Panfila® Global
+                Solutions have created for us. It is visually appealing, clean,
+                easy to navigate and responsive – everything we asked for. The
+                CMS is intuitive and user friendly. Mahimai was a pleasure to
+                work with and has offered advice and support post launch."
+              </p>
+              <div class="th">
+                <div class="im">
+                  <img src="./sec12-2.png" alt="" width="50px" />
+                </div>
+                <div class="head">
+                  <h4>Marks Trans</h4>
+                  <p>Managing Director</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="sec12">
+              <p>
+                "Our site is beautiful! It is easy to navigate. The support has
+                been remarkable for WordPress; if we don’t understand something,
+                Panfila® is very responsive. Panfila® is an extremely talented
+                web design company. We are amazed from where traffic to our site
+                comes; we are a nonprofit and now we are having global
+                visitors.!"
+              </p>
+              <div class="th">
+                <div class="im">
+                  <img src="./sec12-3png.png" alt="" width="50px" />
+                </div>
+                <div class="head">
+                  <h4>St. Thomas Mount</h4>
+                  <p>Rector</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="third-content">
+        <div class="third">
+          <p>
+            Panfila® is among the Top Web Development Companies in Chennai<br />
+            and Ranks on Google for:
+          </p>
+        </div>
+        <div class="part">
+          <div class="left-part">
+            <ul>
+              <li>
+                <i class="fa-solid fa-globe"></i>Web Development Company in
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Best Website Development
+                Company in Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Web Design Company in Chennai
+              </li>
+              <li><i class="fa-solid fa-globe"></i> Web Development Chennai</li>
+              <li><i class="fa-solid fa-globe"></i>Web Design Chennai</li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Top 10 Web Development
+                Companies in Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i> Best Web Design Company in
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i> Top Web Development Company in
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Website Design Company in
+                Chennai
+              </li>
+            </ul>
+          </div>
+          <div class="right-part">
+            <ul>
+              <li>
+                <i class="fa-solid fa-globe"></i>Website Design Company in
+                Chennai
+              </li>
+
+              <li>
+                <i class="fa-solid fa-globe"></i>Website Development Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Web Design & Development
+                Company in Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Best Website Design Company in
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i> Website Designing Services
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i> Web Development Services
+                Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Web Design Services Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i> Website Design & Development
+                Company in Chennai
+              </li>
+              <li>
+                <i class="fa-solid fa-globe"></i>Best Web Design Companies in
+                Chennai
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="fourth-content">
+        <div class="fourth">
+          <h3>R E C O N G N I T I O N S</h3>
+        </div>
+        <div class="end">
+          <div class="upper">
+           <img src="./upper1.png" alt="" width="100px">
+           <img src="./upper2.png" alt="" width="100px">
+           <img src="./upper3.png" alt="" width="100px">
+           <img src="./upper4.png" alt="" width="100px">
+           <img src="./upper5.png" alt="" width="100px">
+          </div>
+          <div class="low">
+          <img src="./low1.png" alt=""width="100px"> 
+          <img src="./low4.png " alt="" width="120px"> 
+          <img src="./low3.png" alt=""width="100px">
+          <img src="./low2.png" alt="" width="100px">
+           <img src="./low5.png" alt="" width="100px" height="30px">
+         </div>
+        </div>
+      </div>
+      <hr>
+      <footer>
+     <p> Made with <i class="fa-solid fa-heart"></i>  in <em> Chennai India</em></p>
+
+
+      </footer>
+
     </div>
   </body>
 </html>
