--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <div class="sec-2">
               <img src="./sec-3.png" alt="" />
               <h5>Best in Class</h5>
+            
               <p>
                 We primarily work with WordPress and we are well-versed in our
                 craft. Every project begins with understanding a brand's needs,
@@ -186,6 +187,7 @@
           </div>
         </div>
       </div>
+      <!-- middle-container -->
       <div class="last-container">
         <div class="heading">
           <h1>Our Services</h1>
